my-assignment/government-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: government-api
  namespace: government-api
  labels:
    app: government-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: government-api
  template:
    metadata:
      labels:
        app: government-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: government-api-sa
      hostNetwork: false #Ensure host network is disabled
      hostPID: false   #Ensure host PID namespace is disabled
      hostIPC: false   #Ensure host IPC namespace is disabled
      containers:
      - name: government-api
        image: daasnigeria/daasrepo:government-api
        imagePullPolicy: Always
        securityContext:
          readOnlyRootFilesystem: true
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
           drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
        ports:
        - containerPort: 8081
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
