my-assignment/government-api/deny-default-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default-network
  namespace: government-api #Government-api namespace
spec:
  podSelector: {}
  policyTypes:
  - Ingress #Deny all incoming traffic
  - Egress #Deny all outgoing traffic
