my-assignment/government-api/network-policy.yaml
# Allow Loan Validator Portal to access Government API
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: government-network-policy
  namespace: government-api
spec:
  podSelector:
    matchLabels:
      app: government-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow Loan Validator Portal
  - from:
    - namespaceSelector:
        matchLabels:
          name: loan-validator-portal
    - podSelector:
        matchLabels:
          app: loan-validator-portal
    ports:
    - protocol: TCP
      port: 8081
  # Allow health checks from kubelet
  - from:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8081

  #Allow traffic to the database
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: postgres
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432

  # Allow DNS
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
